# basic-vectordb-langchain-rag-api-app

./: .gitignore  README.md  app.py  db.py  main.py  pyproject.toml  requirements.txt  vector_utils.py
